sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:11: error: ')' expected but 'else' found.
    } else i=i+1
      ^